--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+logging.level.org.springframework.security=DEBUG
+spring.jpa.show-sql=true
 
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.schema=itpark
+spring.jpa.properties.hibernate.default_schema=multiplier
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=helper.spprt.616@gmail.com
+spring.mail.password=yoltiaraxkmxxqzb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
