--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 logging.level.org.springframework.security=DEBUG
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/multiplier
 #spring.datasource.schema=itpark
 spring.jpa.properties.hibernate.default_schema=multiplier
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
